Add 2025 Inman best of finance winner link

--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
         <ul class="content-list">
           <li>
             <a href="https://www.inman.com/best-of-finance-awards/" target="_blank">
+              2025 Inman Best of Finance Award Winner.
+            </a>
+          </li>
+          <li>
+            <a href="https://www.inman.com/best-of-finance-awards-2024/" target="_blank">
               2024 Inman Best of Finance Award Winner.
             </a>
           </li>
