Add a section on frameworks

--- a/index.html
+++ b/index.html
@@ -103,6 +103,17 @@
         </ul>
       </section>
 
+      <!-- Frameworks Section -->
+      <section id="frameworks" class="section">
+        <h3>Frameworks for life</h3>
+        <div class="subtitle">Frameworks that help me make sense of the world.</div>
+
+        <ul class="content-list">
+          <li><a href="articulating-your-thoughts.html">Frameworks for articulating your thoughts</a></li>
+          <li><a href="explain-why-things-happen.html">Frameworks that explain why things happen the way they do</a></li>
+        </ul>
+      </section>
+
       <!-- Books Section -->
       <section id="books" class="section">
         <h3>Books that have shaped my thinking</h3>
