Minor formatting cleanup

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
         <ul class="content-list">
           <li>
-            <a href="https://www.goodreads.com/book/show/37786022-storyworthy" target="_blank">
-              Storyworthy: Engage, Teach, Persuade, and Change Your Life through the Power of Storytelling
+            <a href="https://www.goodreads.com/book/show/25899336-when-breath-becomes-air" target="_blank">
+              When Breath Becomes Air
             </a>
           </li>
           <li>
@@ -130,13 +130,13 @@
             </a>
           </li>
           <li>
-            <a href="https://www.goodreads.com/book/show/25899336-when-breath-becomes-air" target="_blank">
-              When Breath Becomes Air
+            <a href="https://www.goodreads.com/book/show/18077903-creativity-inc" target="_blank">
+              Creativity, Inc.: Overcoming the Unseen Forces That Stand in the Way of True Inspiration
             </a>
           </li>
           <li>
-            <a href="https://www.goodreads.com/book/show/18077903-creativity-inc" target="_blank">
-              Creativity, Inc.: Overcoming the Unseen Forces That Stand in the Way of True Inspiration
+            <a href="https://www.goodreads.com/book/show/37786022-storyworthy" target="_blank">
+              Storyworthy: Engage, Teach, Persuade, and Change Your Life through the Power of Storytelling
             </a>
           </li>
         </ul>
@@ -199,7 +199,7 @@
           </li>
           <li>
             <a href="https://thefinancialtechnologyreport.com/the-top-25-financial-technology-ctos-and-cios-of-2023/" target="_blank">
-              Top 25 Financial Technology CTOs and CIOs of 2023</a> by The Financial Technology Report.
+              2023 Top 25 Financial Technology CTOs and CIOs</a> by The Financial Technology Report.
           </li>
           <li>
             <a href="https://www.housingwire.com/winner-profile/2022-hw-tech-trendsetter-rutul-dave/" target="_blank">
@@ -207,14 +207,14 @@
             </a>
           </li>
           <li>
-            <a href="https://www.verdict.co.uk/cto-talk-qa-with-rutul-dave-of-maxwell/" target="_blank">CTO Talk: Q&A with Rutul Davé of Maxwell</a> with Verdict.
+            <a href="https://www.verdict.co.uk/cto-talk-qa-with-rutul-dave-of-maxwell/" target="_blank">2022 CTO Talk: Q&A with Rutul Davé of Maxwell</a> with Verdict.
           </li>
           <li>
-            CauseArtist's list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
+            2014 CauseArtist's list of <a href="http://causeartist.com/15-social-entrepreneurs-watch-2014" target="_blank">
               Social Entrepreneurs to watch for in 2014</a>.
           </li>
           <li>
-            <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">Featured
+            <a href="http://online.wsj.com/news/articles/SB10001424127887324880504578298150540138218" target="_blank">2013 Featured
             in The Wall Street Journal</a> and on a <a href="https://vimeo.com/64199097" target="_blank">KRON news segment on on startup visas</a>.
           </li>
         </ul>
