Add link for Frameworks on pages

--- a/explain-why-things-happen.html
+++ b/explain-why-things-happen.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Rutul Dav&egrave;">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Rutul Dav&egrave; | Professional principles - Why Things Happen</title>
+    <title>Rutul Dav&egrave; | Frameworks - Why Things Happen</title>
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -41,6 +41,7 @@
           <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#frameworks">Frameworks</a></li>
             <li><a href="index.html#books">Books</a></li>
             <li><a href="index.html#projects">Projects</a></li>
             <li><a href="index.html#awards">Awards</a></li>
