--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <ul class="nav-menu">
             <li><a href="#about">About</a></li>
             <li><a href="#principles">Principles</a></li>
+            <li><a href="#frameworks">Frameworks</a></li>
             <li><a href="#books">Books</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#awards">Awards</a></li>
