--- a/wealth.html
+++ b/wealth.html
@@ -41,6 +41,7 @@
           <ul class="nav-menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#principles">Principles</a></li>
+            <li><a href="index.html#frameworks">Frameworks</a></li>
             <li><a href="index.html#books">Books</a></li>
             <li><a href="index.html#projects">Projects</a></li>
             <li><a href="index.html#awards">Awards</a></li>
